src/core-crm/objects/Transactional_Messaging_Configuration__c/Transactional_Messaging_Configuration__c.object-meta.xml
<CustomObject>
    <description>Contains configurations for Marketing Cloud Transactional Messaging API</description>
    <label>Transactional Messaging Configuration</label>
    <nameField>
        <displayFormat>TMC-{000000}</displayFormat>
        <label>Transactional Messaging Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactional Messaging Configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>