src/core-crm/objects/Transactional_Messaging_Configuration__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>The two letter country code specifying the country that short code belongs to</description>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>