src/core-crm/objects/Transactional_Messaging_Configuration__c/fields/Definition_Key__c.field-meta.xml
<CustomField>
    <fullName>Definition_Key__c</fullName>
    <description>Unique, user-generated key to access the definition object.</description>
    <label>Definition Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>