src/core-crm/objects/Transactional_Messaging_Configuration__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>User-provided description of the send definition.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>