src/core-crm/objects/Transactional_Messaging_Configuration__c/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <description>The keyword that will be created</description>
    <label>Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>