src/core-crm/objects/Transactional_Messaging_Configuration__c/fields/Long_Code__c.field-meta.xml
<CustomField>
    <fullName>Long_Code__c</fullName>
    <description>The long code that the keyword will be created on</description>
    <label>Long Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>