src/core-crm/objects/Transactional_Messaging_Configuration__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The message content that you want sent with each message. Use substitution strings and AMPscript to personalize the message.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>