src/core-crm/objects/Transactional_Messaging_Configuration__c/fields/Related_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Related_Keyword__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to reference related keyword</description>
    <label>Related Keyword</label>
    <referenceTo>Transactional_Messaging_Configuration__c</referenceTo>
    <relationshipLabel>Transactional Messaging Configurations</relationshipLabel>
    <relationshipName>Transactional_Messaging_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>