src/core-crm/objects/Transactional_Messaging_Configuration__c/fields/Send_Time_End__c.field-meta.xml
<CustomField>
    <fullName>Send_Time_End__c</fullName>
    <description>Indicate end time to process SMS per send definition</description>
    <label>Send Time End</label>
    <type>Time</type>
</CustomField>