src/core-crm/objects/Transactional_Messaging_Configuration__c/fields/Send_Time_Start__c.field-meta.xml
<CustomField>
    <fullName>Send_Time_Start__c</fullName>
    <description>Indicate start time to process SMS per send definition</description>
    <label>Send Time Start</label>
    <type>Time</type>
</CustomField>