src/core-crm/objects/Transactional_Messaging_Configuration__c/fields/Short_Code__c.field-meta.xml
<CustomField>
    <fullName>Short_Code__c</fullName>
    <description>The short code that the keyword will be created on</description>
    <label>Short Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>