src/core-crm/objects/Transactional_Messaging_Configuration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Operational state of the definition: active, inactive, or deleted. A message sent to an active definition is processed and delivered. A message sent to an inactive definition isn’t processed or delivered. Instead, the message is queued for later processing for up to three days.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>