src/core-crm/objects/Transactional_Messaging_Configuration__c/recordTypes/Keyword.recordType-meta.xml
<RecordType>
    <fullName>Keyword</fullName>
    <active>true</active>
    <description>The indicator to conduct SMS and MMS message exchanges between account and mobile devices</description>
    <label>Keyword</label>
</RecordType>