src/core-crm/objects/Transactional_Messaging_Configuration__c/recordTypes/Send_Definition_SMS.recordType-meta.xml
<RecordType>
    <fullName>Send_Definition_SMS</fullName>
    <active>true</active>
    <label>Send Definition - SMS</label>
</RecordType>